# compute.decenterai

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  Readme.md  decenter.py  docker-compose.yml  helpers.py  lilypad_module.json  lilypad_module.json.tmpl  main.py  module.coophive  package.json  pnpm-lock.yaml  pyproject.toml  setup.cfg  start.sh  test_helpers.py
.github/ISSUE_TEMPLATE/: 00-bug.md  10-proposal.md
.github/workflows/: docker.yml  lilypad-module-v2.yml  publish-gcr-latest.yml  publish-gcr.yml  pytest.yml  python.yml
lilypad/: decenter_spec.json  sample_spec.json
lilypad/contracts/: bacalhau.sol
lilypad/contracts/v1/: DecenterPad.sol  LilypadEventsUpgradeable.sol
lotus-cli/: upload.sh
refs/: lilypad_module_sample.py
web3/: bacalhau.py  cid.py  lighthouse.ipynb  lighthouse.js  lighthouse.py  test_cid.py
web3-storage-quickstart/: Readme.md  main.ts  package.json  pnpm-lock.yaml  tsconfig.json  upload-nft.ts
